# visual_context_engineering

./: .vcer.yml  AGENT.md  GEMINI.md  Makefile  README.md  parts.json  pyproject.toml  run_desktop.py
examples/: system.md  test-ollama.ps1  user.md
scripts/: run.cmd  run.ps1  test.cmd  test.ps1
src/vcer/: __main__.py  cli.py
src/vcer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vcer/adapters/: router.py
src/vcer/config/: loader.py
src/vcer/core/: analyzer.py  optimizer.py  parts.py
src/vcer/visualize/: mermaid.py  terminal.py
web/: index.html
